--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,11 +1,11 @@
 :root {
   --color1: #211663;
   --color2: #0cae88;
-  --letter-spacing: 0.5em;
+  --letter-spacing: 0.4em;
   --white: #ffffff;
   --transparent: rgba(221, 221, 221, 32%);
   --shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.13);
-  --radius: 0.5em;
+  --radius: 2em;
 }
 *,
 *::after,
@@ -31,19 +31,21 @@
 
   background-attachment: fixed;
   min-height: 100vh;
+  padding: 0.2rem 2rem;
+  padding-bottom: 2rem;
+  font-weight: bold;
   color: var(--white);
 }
 .logo-h1 {
-  font-size: 2em;
+  font-size: clamp(0.7rem, 2vw, 2rem);
   display: inline-block;
   position: relative;
-  padding-left: var(--letter-spacing);
 }
 .container {
   display: flex;
   width: 2.5rem;
   height: 2.5rem;
-  border-radius: 0.5rem;
+  border-radius: 0.5em;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -80,7 +82,7 @@
   background-color: rgb(42, 42, 42);
   padding: 1rem;
   padding-inline: 3rem;
-  border-radius: 0.7em;
+  border-radius: var(--radius);
   border: 1px solid rgb(56, 56, 56);
   box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 10px;
   transition: all 0.2s;
@@ -91,12 +93,6 @@
   background-color: rgb(107, 107, 107);
 }
 
-.authenticated {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .navbar {
   display: flex;
   align-items: center;
@@ -104,7 +100,8 @@
   background-color: transparent;
   width: 100%;
   height: 70px;
-  padding-inline: 0.5rem;
+  margin-top: -0.3rem;
+  /* padding-inline: 0.5rem; */
   text-transform: uppercase;
 }
 nav {
@@ -121,7 +118,12 @@ nav ul {
 }
 
 nav li {
-  padding-left: 2rem;
+  padding-left: 1.8rem;
+}
+.authenticated {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .link:visited {
@@ -141,7 +143,7 @@ nav li {
   padding-block: 0.8em;
   padding-left: calc(0.8em + var(--letter-spacing));
   background-color: var(--transparent);
-  border-radius: 1em;
+  border-radius: var(--radius);
   font-size: 0.8em;
   z-index: 3;
   transition: transform 200ms ease;
@@ -151,7 +153,7 @@ nav li {
   position: absolute;
   opacity: 0;
   box-shadow: var(--shadow);
-  border-radius: 1em;
+  border-radius: var(--radius);
   z-index: -1;
   top: 0;
   left: 0;
@@ -166,6 +168,7 @@ nav li {
   transform: scale(1.1);
 }
 
+/* SEARCH BAR STYLING START */
 .search-container {
   position: relative;
   background-color: var(--transparent);
@@ -244,24 +247,91 @@ nav li {
   width: 2.5em;
   height: 2.5em;
 }
+/* SEARCH BAR STYLING END */
+
+/* POST STYLING START */
+.post-container {
+  background-color: var(--transparent);
+  border-radius: var(--radius);
+  margin-top: 1.5rem;
+  padding: 1rem;
+  display: inline-block;
+  box-shadow: var(--shadow);
+}
+.post-heading-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.post-image {
+  display: flex;
+  align-self: flex-start;
+  padding-left: 0.5rem;
+}
+.post-image img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+.post-username {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 1rem;
+  gap: 0.3rem;
+}
+.post-name {
+  font-size: clamp(0.72rem, 1.4vw, 1.2rem);
+  letter-spacing: 1px;
+}
+.post-duration {
+  font-size: clamp(0.5rem, 1vw, 0.8rem);
+  letter-spacing: 1px;
+}
+.post-body-container {
+  text-align: left;
+  font-size: clamp(0.65rem, 1vw, 0.95rem);
+  margin-block: 2rem;
+  margin-left: 4.6rem;
+  line-height: 24px;
+  letter-spacing: 1px;
+}
+.post-body-container p {
+  letter-spacing: 1px;
+}
+.like-comment-container {
+  display: flex;
+  align-self: flex-start;
+  gap: 1.5rem;
+  font-size: clamp(0.8rem, 1.2vw, 1rem);
+}
+.post-like-comment {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.post-like-comment span {
+  letter-spacing: 1px;
+}
+.icon {
+  font-size: clamp(1.1rem, 2vw, 2rem);
+}
+.post-images-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: clamp(0.5rem, 2vw, 2rem);
+}
+/* POST STYLING END */
 
 .username {
-  color: rgb(238, 238, 238);
-  background: -webkit-linear-gradient(
-    to bottom,
-    #2c5364,
-    #203a43
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #2c5364,
-    #203a43
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 12px;
-  font-weight: bolder;
-
-  padding: 0.7rem;
+  color: var(--white);
+  font-weight: bold;
+  max-width: 120px;
+  font-size: clamp(0.6rem, 1vw, 0.7rem);
 }
 
 .App {
@@ -296,7 +366,7 @@ nav li {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 12px;
   color: rgb(238, 238, 238);
   background-color: #2c5364;
-  border-radius: 1rem;
+  border-radius: var(--radius);
   padding: 0.5rem;
   text-transform: uppercase;
 }
@@ -308,7 +378,7 @@ nav li {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 12px;
   color: rgb(238, 238, 238);
   background-color: rgb(146, 47, 47);
-  border-radius: 1rem;
+  border-radius: var(--radius);
   padding: 0.5rem;
   text-transform: uppercase;
 }
@@ -322,20 +392,25 @@ form {
   overflow: auto;
 }
 
-@media screen and (max-width: 950px) {
-  .logo-h1 {
-    font-size: 1.1em;
-  }
+@media screen and (max-width: 1000px) {
   .navbar {
     height: 65px;
     padding-inline: 0.5rem;
+    margin-top: -0.5rem;
   }
   .search-container {
     transform: scale(0.8);
   }
   .search-container:focus-within {
-    width: 20em;
+    width: 30em;
     transform: scale(0.8);
+  }
+  .post-image img {
+    width: 2rem;
+    height: 2rem;
+  }
+  .post-body-container {
+    margin-left: 3.6rem;
   }
   .hamburger {
     display: flex;
@@ -350,14 +425,14 @@ form {
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 70px;
     min-width: 150px;
-    right: 0.8rem;
+    top: 70px;
+    right: 1.5rem;
     z-index: 99;
     box-shadow: var(--shadow);
-    backdrop-filter: blur(2.5px);
+    backdrop-filter: blur(10px);
     background-color: var(--transparent);
-    border-radius: 1rem;
+    border-radius: 1em;
   }
   nav li {
     padding-left: 0;
@@ -374,8 +449,6 @@ form {
   }
   .username {
     max-width: 120px;
-    word-wrap: break-word;
-    font-size: 14px;
   }
 
   .avatar {
@@ -383,25 +456,50 @@ form {
     margin-bottom: -2rem;
   }
 }
-@media screen and (max-width: 620px) {
-  .search-input {
-    width: 20em;
+@media screen and (max-width: 500px) {
+  .App {
+    padding: 0.5rem;
   }
-}
-@media screen and (max-width: 600px) {
-  .search-input {
-    width: 15em;
+  .navbar {
+    margin-top: -1rem;
+  }
+  .container {
+    transform: scale(0.7);
+  }
+  .active {
+    transform: scale(0.8);
+    top: 40px;
+    right: 0.2rem;
+  }
+  .like-comment-container {
+    gap: 1rem;
+  }
+  .post-image img {
+    width: 1.6rem;
+    height: 1.6rem;
+  }
+  .post-body-container {
+    margin-left: 3.1rem;
   }
 }
 @media screen and (max-width: 450px) {
-  .logo-h1 {
-    font-size: 0.8em;
-  }
-  .search-input {
-    width: 10em;
-  }
   .search-container {
     transform: scale(0.7);
+  }
+  .like-comment-container {
+    gap: 0.7rem;
+  }
+  .post-like-comment {
+    gap: 0.4rem;
+  }
+  .post-image {
+    padding: 0;
+  }
+  .post-username {
+    padding-left: 0.5rem;
+  }
+  .post-body-container {
+    margin-left: 2rem;
   }
   .search-container:focus-within {
     width: 20em;
