--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -5,7 +5,7 @@
   --white: #ffffff;
   --transparent: rgba(221, 221, 221, 32%);
   --shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.13);
-  --radius: 2em;
+  --radius: 25px;
 }
 *,
 *::after,
@@ -249,13 +249,28 @@ nav li {
 }
 /* SEARCH BAR STYLING END */
 
+/* CREATE_POST STYLING START */
+.post-input {
+  background-color: transparent;
+  outline: none;
+  flex-grow: 1;
+  font-size: clamp(0.72rem, 1.4vw, 1.2rem);
+  color: var(--white);
+  border: 0;
+  padding: 0 0.8em;
+}
+.post-input::placeholder {
+  color: var(--white);
+  opacity: 0.5;
+}
+/* CREATE_POST STYLING END */
+
 /* POST STYLING START */
 .post-container {
   background-color: var(--transparent);
   border-radius: var(--radius);
   margin-top: 1.5rem;
   padding: 1rem;
-  display: inline-block;
   box-shadow: var(--shadow);
 }
 .post-heading-container {
