--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -271,6 +271,8 @@ nav li {
 .image-upload-container > input {
   width: 40px;
   height: 40px;
+  border-radius: 5px;
+  align-self: stretch;
   position: relative;
 }
 .image-upload-container > input::before {
@@ -280,7 +282,7 @@ nav li {
   background-repeat: no-repeat;
   background-size: cover;
   top: -2px;
-  left: -4px;
+  left: -2px;
   width: 120%;
   height: 120%;
   cursor: pointer;
