edit post ui done with scrollbar styling

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -309,6 +309,11 @@ input[type="file"] {
   cursor: pointer;
   right: -20px;
 }
+.icon-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* CREATE_POST STYLING END */
 
 /* POST STYLING START */
