--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -18,6 +18,9 @@
   font-family: "Poppins", sans-serif;
   letter-spacing: var(--letter-spacing);
 }
+body {
+  overflow: overlay;
+}
 
 /*SCROLL BAR STYLING START*/
 html::-webkit-scrollbar,
@@ -32,7 +35,6 @@ html::-webkit-scrollbar-thumb,
   background-color: var(--color1);
   border-radius: var(--radius);
 }
-html::-webkit-scrollbar-track,
 .post-input::-webkit-scrollbar-track {
   background-color: var(--color2);
 }
