--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -605,25 +605,17 @@ input[type="file"] {
 }
 
 .avatar {
-  color: rgb(238, 238, 238);
-  /* background: -webkit-linear-gradient(
-    to bottom,
-    #2c5364,
-    #203a43
-  );
-  background: linear-gradient(
-    to bottom,
-    #2c5364,
-    #203a43
-  );  */
   border-radius: 50%;
   width: 50px;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 12px; */
   font-weight: bolder;
+}
+.avatar img {
+  width: 3rem;
+  height: 3rem;
 }
 
 .msg {
