--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -92,7 +92,7 @@ html::-webkit-scrollbar-thumb,
   width: 1.5rem;
   margin: 0.15rem;
   border-radius: 0.1rem;
-  transition: all 350ms ease;
+  transition: all 350ms cubic-bezier(0.11, 0.49, 0.18, 1.4);
 }
 .cross .line:nth-child(2) {
   display: none;
