--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -158,6 +158,7 @@ nav li {
   position: relative;
   z-index: 3;
   transition: transform 200ms ease;
+  letter-spacing: 1px;
 }
 .nav-item::before {
   content: "";
@@ -309,16 +310,17 @@ input[type="file"] {
 .cancel {
   transform: scale(0.5) !important;
   background-color: rgb(42, 42, 42, 0.6);
+  cursor: pointer;
   border-radius: 50%;
   position: absolute;
   top: -20px;
-  cursor: pointer;
   right: -20px;
 }
 .icon-label {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 /* CREATE_POST STYLING END */
 
@@ -616,6 +618,7 @@ input[type="file"] {
 .avatar img {
   width: 3rem;
   height: 3rem;
+  border-radius: 50%;
 }
 
 .msg {
@@ -715,6 +718,63 @@ input[type="file"] {
 .notification-container p {
   letter-spacing: 1px;
   font-size: clamp(0.6em, 1.5vw, 1em);
+}
+
+.edit-profile-container {
+  background-color: var(--transparent);
+  display: inline-flex;
+  flex-direction: column;
+  width: 80%;
+  height: 75vh;
+  margin-top: 6vh;
+  justify-content: center;
+  gap: clamp(1.5rem, 5vw, 3rem);
+  align-items: center;
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+}
+.edit-profile-heading {
+  font-size: clamp(0.2rem, 5vw, 2rem);
+  letter-spacing: 2px;
+}
+.edit-profile-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.edit-profile-image img {
+  object-fit: fill;
+  width: 8rem;
+  height: 8rem;
+  border-radius: var(--radius);
+}
+.edit-profile-input {
+  background-color: var(--transparent);
+  border: none;
+  outline: none;
+  color: var(--white);
+  border-radius: var(--radius);
+  font-weight: bolder;
+  letter-spacing: 1px;
+  width: 50%;
+  font-size: clamp(0.7rem, 1.4vw, 1.1rem);
+  box-shadow: var(--shadow);
+  padding: 0.4em 0.8em;
+}
+.upload-container {
+  position: absolute;
+  bottom: -5%;
+  right: -5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.8rem;
+  height: 1.8rem;
+  background-color: var(--transparent);
+  border-radius: 50%;
+  background-color: rgb(42, 42, 42, 0.9);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
