--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -129,7 +129,7 @@ nav ul {
 }
 
 nav li {
-  padding-left: 1.8rem;
+  padding-left: 1rem;
 }
 .authenticated {
   display: flex;
@@ -149,9 +149,8 @@ nav li {
 
 .nav-item {
   display: inline-block;
-  padding-right: 0.8em;
+  padding-inline: 0.8em;
   padding-block: 0.8em;
-  padding-left: calc(0.8em + var(--letter-spacing));
   background-color: var(--transparent);
   border-radius: var(--radius);
   font-size: 0.8em;
@@ -227,7 +226,7 @@ nav li {
 }
 
 .search-container:focus-within {
-  width: 25em;
+  width: 20em;
   color: var(--white);
   border: none;
   font-size: 1em;
@@ -412,7 +411,7 @@ input[type="file"] {
   display: inline-block;
   width: 85%;
   margin-top: 2rem;
-  margin-bottom: 6rem;
+  margin-bottom: 2rem;
 }
 
 .comment-maker {
@@ -728,14 +727,14 @@ input[type="file"] {
   height: 75vh;
   margin-top: 6vh;
   justify-content: center;
-  gap: clamp(1.5rem, 5vw, 3rem);
   align-items: center;
   border-radius: var(--radius);
   box-shadow: var(--shadow);
 }
 .edit-profile-heading {
   font-size: clamp(0.2rem, 5vw, 2rem);
-  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-top: 1rem;
 }
 .edit-profile-image {
   display: flex;
@@ -757,10 +756,19 @@ input[type="file"] {
   border-radius: var(--radius);
   font-weight: bolder;
   letter-spacing: 1px;
-  width: 50%;
+  width: clamp(10rem, 50%, 25rem);
   font-size: clamp(0.7rem, 1.4vw, 1.1rem);
   box-shadow: var(--shadow);
   padding: 0.4em 0.8em;
+}
+.edit-profile-body {
+  flex-direction: column;
+  display: flex;
+  gap: clamp(1rem, 10%, 2rem);
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 .upload-container {
   position: absolute;
@@ -775,6 +783,25 @@ input[type="file"] {
   border-radius: 50%;
   background-color: rgb(42, 42, 42, 0.9);
   cursor: pointer;
+}
+
+.footer {
+  background: linear-gradient(
+    to top,
+    var(--color1-transparent),
+    var(--color2-transparent)
+  );
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+  padding: 3rem;
+  border-radius: var(--radius);
+  font-weight: lighter;
+  font-size: clamp(0.7rem, 1.4vw, 1.1rem);
+  box-shadow: var(--shadow);
+}
+.footer b {
+  font-weight: bolder;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 1000px) {
