--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -67,10 +67,9 @@ html::-webkit-scrollbar-thumb,
   color: var(--white);
   text-align: center;
 }
-.logo-h1 {
-  font-size: clamp(0.7rem, 2vw, 2rem);
-  display: inline-block;
-  position: relative;
+.logo {
+  max-height: clamp(1.6rem, 10vw, 4.6rem);
+  display: flex;
 }
 .container {
   display: flex;
@@ -111,8 +110,7 @@ html::-webkit-scrollbar-thumb,
   background-color: transparent;
   width: 100%;
   height: 70px;
-  margin-top: -0.3rem;
-  /* padding-inline: 0.5rem; */
+  margin-top: 0.3rem;
   text-transform: uppercase;
 }
 nav {
@@ -810,9 +808,7 @@ input[type="file"] {
 
 @media screen and (max-width: 1000px) {
   .navbar {
-    height: 65px;
     padding-inline: 0.5rem;
-    margin-top: -0.5rem;
   }
   .search-container {
     transform: scale(0.8);
