--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -342,6 +342,7 @@ input[type="file"] {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
+  object-fit: cover;
 }
 .post-username {
   flex-grow: 1;
@@ -616,6 +617,7 @@ input[type="file"] {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .msg {
@@ -742,7 +744,7 @@ input[type="file"] {
   position: relative;
 }
 .edit-profile-image img {
-  object-fit: fill;
+  object-fit: cover;
   width: 8rem;
   height: 8rem;
   border-radius: var(--radius);
